<?xml version="1.0"?>
<package format="2">
  <name>cartographer_initialpose</name>
  <version>0.0.0</version>
  <description>The cartographer_initialpose package</description>

  <maintainer email="shichunguo@gmail.com">Colin</maintainer>

  <license>MIT</license>

  <url type="website">http://autolabor.com.cn</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cartographer_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>cartographer_ros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
