<package>
    <name>navi_multi_goals_pub_rviz_plugin</name>
    <version>0.0.0</version>
    <description>The navi_multi_goals_pub_rviz_plugin package</description>

    <maintainer email="ryoo@todo.todo">ryoo</maintainer>

    <license>MIT</license>

    <url type="website">http://autolabor.com.cn</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>rviz</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>


    <run_depend>roscpp</run_depend>
    <run_depend>rviz</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
