<?xml version="1.0"?>
<package>
  <name>rviz_navigation_tools</name>
  <version>0.0.0</version>
  <description>The rviz_navigation_tools package</description>

  <maintainer email="shichunguo@gmail.com">colin</maintainer>

  <license>MIT</license>

  <url type="website">http://autolabor.com.cn</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
